Amazon Q changes incorporated to add Swagger etc.